Fixed spacing and updated logic for invites

--- a/src/components/CreateMeeting.css
+++ b/src/components/CreateMeeting.css
@@ -8,9 +8,14 @@
     margin-right: 200px; /* To align with heading content */
     margin-top: 100px;
     width: 550px;
-    height: 600px;
+    height: 610px;
     border: 3px solid #D9D9D9;
     border-radius: 30px;
+}
+
+.meeting-form {
+    justify-content: center;
+    align-items: flex-start;
 }
 
 .meeting-box-header {
@@ -50,13 +55,14 @@
 .meeting-description-text {
     margin-left: 35px;
     font-size: 18px;
-    margin-top: 20px;
+    margin-top: 10px;
     color: #373737;
 }
 
 .meeting-description-input {
     width: 470px;
     height: 70px;
+    margin-left: 35px;
     font-family: "Inter", sans-serif;
     font-size: 14px;
     border: 2px solid #E0E0E0;
@@ -70,6 +76,7 @@
     display: flex;
     flex-direction: row;
     align-items: center;
+    margin-left: 15px;
 }
 
 .meeting-time-input {
@@ -125,6 +132,7 @@
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     grid-column-gap: 10px;
+    margin-left: 35px;
 }
 
 .invite-input {
@@ -135,7 +143,8 @@
     display: flex;
     flex-direction: row;
     align-items: center;
-    margin-top: 20px;
+    margin-top: 10px;
+    margin-left: 35px;
 }
 
 .recurring-checkbox {
@@ -162,8 +171,9 @@
     justify-content: center;
     height: 40px;
     width: 350px;
-    margin-top: 20px;
+    margin-top: 10px;
     margin-bottom: 20px;
+    margin-left: 100px;
     background-color: #0040B4;
     font-family: 'Inter', sans-serif;
     color: white;
@@ -176,4 +186,12 @@
     background-color: white;
     border: 3px solid #0040B4;
     color: #0040B4;
+}
+
+.meeting-description-input:focus {
+    outline: none;
+    outline-width: 0px;
+    box-shadow: none;
+    -moz-box-shadow: none;
+    -webkit-box-shadow: none;
 }
